<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Syndes JComponents</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_lock">Lock</string>
    <string name="title_activity_settings">Settings</string>
    <string name="invalid_key_error">Key length must be at least 3 characters.</string>
    <string name="invalid_passcode_error">Passcode must have at least 2 characters.</string>
    <string name="error_title">Error</string>
    <string name="settings_save_error">Couldn\'t save settings!</string>
    <string name="no_encryption_key_set_error">Encryption key not set. Please check settings.</string>
    <string name="unlockButtonText">Unlock</string>
    <string name="wrong_passcode_error">Incorrect passcode entered.</string>
    <string name="encryption_key_label">Encryption Key (use a complex one, e.g., "jn@32+iQm9")</string>
    <string name="passcode_label">Passcode (for lock screen)</string>
    <string name="about_title">About ZER0LESS</string>
    <string name="about_copyright">No Copyright, N.S.F.</string>
    <string name="about_source">Source code will be available on GitHub</string>
    <string name="about_license_1">ZER0LESS is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="about_license_2">"No system is secure." In information security, there are no guarantees. Only ZeroTrust.</string>
    <string name="about_license_3">A copy of the GNU General Public License is distributed with the source code of ZER0LESS. You can also find a copy here: <a>https://www.gnu.org/licenses/gpl-3.0.html</a></string>
    <string name="default_passcode">Default passcode is: 1111</string>
    <string name="encrypt_button_text">Encrypt</string>
    <string name="decrypt_button_text">Decrypt</string>
    <string name="copy_button_text">Copy</string>
    <string name="paste_button_text">Paste</string>
    <string name="lock_timeout_label">Keep the app unlocked (in minutes)</string>
    <string name="lock_timeout_help">The app will lock if there is no activity for a few minutes. Set to 0 for immediate locking.</string>
    <string name="clear_button">Clear</string>
    <string name="save_button">Save</string>
    <string name="theme_label">Choose Theme</string>
    <string name="language_label">Choose Language</string>
    <string name="encryption_key_hint">Enter encryption key</string>
    <string name="passcode_hint">Enter passcode</string>
    <string name="lock_timeout_hint">Timeout in minutes</string>
    <string name="theme_language_warning">Changing the theme or language requires restarting the app.</string>
</resources>
